Added humidity tests